adition of yargs

--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "fs-extra": "^4.0.1",
-    "oracledb": "^1.13.1"
+    "oracledb": "^1.13.1",
+    "yargs": "^8.0.2"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.8",
     "@types/fs-extra": "^4.0.0",
     "@types/oracledb": "^1.11.33",
+    "@types/yargs": "^8.0.2",
     "gulp": "^3.9.1",
     "gulp-jasmine": "^2.4.2",
     "gulp-rimraf": "^0.2.1",
@@ -24,7 +26,6 @@
     "gulp-typescript": "^3.2.1",
     "jasmine": "^2.7.0",
     "jasmine-core": "^2.7.0",
-    "typescript": "^2.4.2",
-    "yargs": "^8.0.2"
+    "typescript": "^2.4.2"
   }
 }
